Added new stats to LithosDex API, modified logging levels of certain log messages, cleaned up configuration files, and changed MinerDictionary to use CommitmentTransactions for initial commitment.
